--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 98vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* Shorthand - Background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url("imagens/wallpaper002.jpg") center center no-repeat  fixed; 
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +36,11 @@
 <body>
     <main>
         <h1>Teste de Imagens de Fundo</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita maxime dolorum architecto, culpa obcaecati consequuntur praesentium voluptatibus aliquam, ea soluta aspernatur optio, magnam quis sit suscipit provident impedit adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic iste alias ea, sit reiciendis voluptatem neque iure voluptates veritatis ipsum quaerat inventore nesciunt rem accusamus recusandae dolorem voluptatum fugiat totam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, consectetur aliquid aperiam facilis non accusantium quaerat recusandae, quod eligendi beatae sed unde iusto ipsum cupiditate laborum vitae reprehenderit corporis qui.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita maxime dolorum architecto, culpa obcaecati consequuntur praesentium voluptatibus aliquam, ea soluta aspernatur optio, magnam quis sit suscipit provident impedit adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic iste alias ea, sit reiciendis voluptatem neque iure voluptates veritatis ipsum quaerat inventore nesciunt rem accusamus recusandae dolorem voluptatum fugiat totam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, consectetur aliquid aperiam facilis non accusantium quaerat recusandae, quod eligendi beatae sed unde iusto ipsum cupiditate laborum vitae reprehenderit corporis qui.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita maxime dolorum architecto, culpa obcaecati consequuntur praesentium voluptatibus aliquam, ea soluta aspernatur optio, magnam quis sit suscipit provident impedit adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic iste alias ea, sit reiciendis voluptatem neque iure voluptates veritatis ipsum quaerat inventore nesciunt rem accusamus recusandae dolorem voluptatum fugiat totam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, consectetur aliquid aperiam facilis non accusantium quaerat recusandae, quod eligendi beatae sed unde iusto ipsum cupiditate laborum vitae reprehenderit corporis qui.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita maxime dolorum architecto, culpa obcaecati consequuntur praesentium voluptatibus aliquam, ea soluta aspernatur optio, magnam quis sit suscipit provident impedit adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic iste alias ea, sit reiciendis voluptatem neque iure voluptates veritatis ipsum quaerat inventore nesciunt rem accusamus recusandae dolorem voluptatum fugiat totam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, consectetur aliquid aperiam facilis non accusantium quaerat recusandae, quod eligendi beatae sed unde iusto ipsum cupiditate laborum vitae reprehenderit corporis qui.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita maxime dolorum architecto, culpa obcaecati consequuntur praesentium voluptatibus aliquam, ea soluta aspernatur optio, magnam quis sit suscipit provident impedit adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic iste alias ea, sit reiciendis voluptatem neque iure voluptates veritatis ipsum quaerat inventore nesciunt rem accusamus recusandae dolorem voluptatum fugiat totam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, consectetur aliquid aperiam facilis non accusantium quaerat recusandae, quod eligendi beatae sed unde iusto ipsum cupiditate laborum vitae reprehenderit corporis qui.</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita maxime dolorum architecto, culpa obcaecati consequuntur praesentium voluptatibus aliquam, ea soluta aspernatur optio, magnam quis sit suscipit provident impedit adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic iste alias ea, sit reiciendis voluptatem neque iure voluptates veritatis ipsum quaerat inventore nesciunt rem accusamus recusandae dolorem voluptatum fugiat totam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, consectetur aliquid aperiam facilis non accusantium quaerat recusandae, quod eligendi beatae sed unde iusto ipsum cupiditate laborum vitae reprehenderit corporis qui.</p>
     </main>
 </body>
