--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, natus totam! Eligendi, tenetur dignissimos! Maxime mollitia aperiam doloremque. Animi labore eum deserunt placeat vel voluptatem odit velit porro reprehenderit eos! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat deserunt culpa vel hic velit pariatur recusandae autem, sint cupiditate modi dicta maxime reprehenderit maiores tempora officiis facere nam quibusdam voluptate.</p>
 
-    <iframe src="paginas-extras/pag001.html" id="tela" name="frame">
+    <iframe srcdoc="<h1>Escolha uma das opções acima</h1><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis porro error voluptatibus perferendis saepe voluptates excepturi numquam nisi? Corrupti quasi quam eos sed architecto obcaecati error voluptatum illo. Aperiam, ipsa.</p> <img src='logo do curso em video'>" id="tela" name="frame">
         <p>Infelizmente seu navegador não é compativel com isso</p>
     </iframe>
 
